# linalg

./: CMakeLists.txt  README.md  benchmark.py  example.py
include/: fastmap.hpp  linalg.hpp
src/: bindings.cpp  example.cpp
